--- a/i18n/zh-hans.json
+++ b/i18n/zh-hans.json
@@ -5,7 +5,7 @@
 			"Liuxinyu970226"
 		]
 	},
-	"wiked-diff-desc": "内联样式带封禁移除支持的差异引擎",
+	"wiked-diff-desc": "带块移动支持的内联样式差异引擎",
 	"wiked-diff-empty": "（没有差异）",
 	"wiked-diff-same": "版本间无差异",
 	"wiked-diff-ins": "已插入",
@@ -14,5 +14,6 @@
 	"wiked-diff-block-right": "已移动 ▶",
 	"wiked-diff-block-left-nounicode": "< 已移动",
 	"wiked-diff-block-right-nounicode": "已移动 >",
-	"wiked-diff-error": "错误：wikEdDiff输出不符合原始版本！"
+	"wiked-diff-error": "错误：wikEdDiff输出不符合原始版本！",
+	"wiked-diff-toggle": "使用 WikEdDiff 进行差异比对（内联比对模式）"
 }
